# Mining-Assist

./: .gitignore  .gitmessage  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mining_assist/: pyproject.toml  pyrightconfig.json
mining_assist/cfg/: detector.yaml
mining_assist/scripts/: run_pyright.py
mining_assist/src/mining_assist/: __init__.py  grabber.py  main.py  utils.py
mining_assist/src/mining_assist/scripts/: __init__.py  teleop_record.py
mining_assist/tests/: __init__.py  conftest.py
mining_assist/tests/e2e/: __init__.py  test_full_workflow.py
mining_assist/tests/integration/: __init__.py  test_grabber.py  test_teleop_record.py
mining_assist/tests/unit/: __init__.py  test_grabber.py  test_teleop_record.py  test_utils.py
