[tool.poetry]
name = "mining-assist"
version = "0.1.0"
description = "Python-based RL agent for 3D game automation with mode detection and context-specific policies"
authors = ["Colin Swenson-Healey <chozandrias76@gmail.com>"]
readme = "README.md"
packages = [{include = "mining_assist", from = "mining_assist/src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
dxcam = ">=0.0.5,<0.0.6"
gymnasium = ">=1.2.1,<2.0.0"
mss = ">=10.1.0,<11.0.0"
numpy = ">=2.0.0,<2.3.0"
omegaconf = ">=2.3.0,<3.0.0"
opencv-python = ">=4.12.0.88,<5.0.0.0"
pynput = ">=1.8.1,<2.0.0"
pywin32 = {version = ">=311,<312", markers = "sys_platform == 'win32'"}
stable-baselines3 = ">=2.7.0,<3.0.0"
torch = ">=2.9.0,<3.0.0"
torchvision = ">=0.24.0,<0.25.0"
tqdm = ">=4.67.1,<5.0.0"
vgamepad = ">=0.1.0,<0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pyright = "^1.1.0"
pre-commit = "^3.0.0"
commitizen = "^3.12.0"

[tool.poetry.scripts]
mining-assist = "mining_assist.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "PIE", # flake8-pie
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "Q",   # flake8-quotes
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "A003",  # class attribute is shadowing a python builtin
]

[tool.ruff.per-file-ignores]
"tests/*" = ["T20"]  # Allow print statements in tests

[tool.ruff.isort]
known-first-party = ["mining_assist"]

[tool.pyright]
include = ["mining_assist/src", "mining_assist/scripts", "mining_assist/tests"]
exclude = ["**/__pycache__", "**/*.pyc", ".venv", "build", "dist"]
defineConstant = { DEBUG = true }
pythonVersion = "3.11"
pythonPlatform = "Windows"
executionEnvironments = [
  { root = "mining_assist/src" }
]
reportGeneralTypeIssues = true
reportMissingImports = true
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateImportUsage = true
stubPath = "mining_assist/src"

[tool.pytest.ini_options]
testpaths = ["mining_assist/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mining_assist",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = ["mining_assist/src", "mining_assist/tests"]

[[tool.mypy.overrides]]
module = [
    "dxcam.*",
    "mss.*",
    "pynput.*",
    "vgamepad.*",
    "win32gui.*",
    "cv2.*",
]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.coverage.run]
source = ["mining_assist"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
